--- a/css/style.css
+++ b/css/style.css
@@ -18,23 +18,12 @@ body {
 #container {
   margin: 0 auto;
   width: 900px;
-
-  /* TODO: cleanup
-  height: 100%;
-  */
 }
 
 #menu {
   width: 150px;
   float: left;
   text-align: right;
-
-  /* TODO: cleanup
-  height: 100%;
-  position: fixed;
-  overflow-x: hidden;
-  overflow-y: auto;
-  */
 }
 
 #menu-inner {
@@ -42,11 +31,7 @@ body {
 }
 
 #contents {
-  /* TODO: cleanup
-  margin-left: 150px;
-  */
   padding: 50px 25px;
-  
   width: 700px;
   float: left;
 }
@@ -55,48 +40,17 @@ h2 {
   padding-top: 20px;
   padding-bottom: 10px;
   border-bottom: 1px solid #FACAE6;
-  color: #F0209B;
+  color: #2BE01B;
 }
 
 a {
-  color: #F0209B;
+  color: #2BE01B;
   text-decoration: none;
 }
 a:hover {
-  color: #BE1F85;
+  color: #148C0A;
   text-decoration: underline;
 }
-
-/*
-ul.nav {
-  text-decoration: none;
-  text-transform: uppercase;
-
-  margin-bottom: 30px;
-  padding-left: 0px;
-}
-li.nav {
-  list-style: none;
-}
-
-ul li.nav {
-  text-decoration: none;
-  text-transform: uppercase;
-  font-weight: bold;
-  font-size: 11pt;
-  color: #F0209B;
-
-  margin-top: 5px;  
-}
-
-ul li ul li.nav {
-  text-decoration: none;
-  text-transform: none;
-  font-weight: normal;
-  font-size: 11pt;
-  color: #4D4D4D;
-}
-*/
 
 div.nav ul {
   text-decoration: none;
@@ -105,6 +59,7 @@ div.nav ul {
   margin-bottom: 30px;
   padding-left: 0;
 }
+
 li.nav {
 
 }
@@ -114,7 +69,7 @@ div.nav ul li {
   text-transform: uppercase;
   font-weight: bold;
   font-size: 11pt;
-  color: #F0209B;
+  color: #2BE01B;
 
   list-style: none;
   margin-top: 5px;  
