Update links to Almende

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
 
 <body>
 
-<a href="https://github.com/mrquincle/nets" style="position: fixed; top: 0; right: 0; border: 0;" >
+<a href="https://github.com/almende/nets" style="position: fixed; top: 0; right: 0; border: 0;" >
   <img src="img/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" >
 </a>
   
@@ -23,7 +23,7 @@
 <div id="menu">
 <div id="menu-inner">
 
-<a href="http://mrquincle.github.com/nets"><img src="img/logo/eve128.png" alt="logo"></a>
+<!--<a href="http://almende.github.com/nets"><img src="img/logo/eve128.png" alt="logo"></a> -->
 <br>
 
 <div class="nav">
