--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
 <div id="menu">
 <div id="menu-inner">
 
-<a href="http://almende.github.com/nets"><img src="img/Nets3.png" alt="logo"></a> -->
+<a href="http://almende.github.com/nets"><img src="img/Nets3.png" alt="logo"></a>
 <br>
 
 <div class="nav">
